--- a/AULA13/DEVER/CSS/estilo.css
+++ b/AULA13/DEVER/CSS/estilo.css
@@ -1,33 +1,57 @@
 * {
     margin: 0;
     padding: 0;
+    color: aliceblue;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
-h1 {
+body {
+    background-image: url(./IMG/bg.jpg);
+    background-size: cover;
+}
+
+.title_h1 {
+    margin-top: 5%;
+    font-size: 4rem;
+}
+
+.title_h4 {
+    margin-bottom: 5%;
+}
+
+.control-label {
+    text-align: right;
+    font-size: 1.5rem;
+}
+
+.formSect {
+    margin-bottom: 2%;
+}
+
+.form-idade {
     text-align: center;
+}
+
+.divBtn {
     margin: 0 auto;
 }
 
-#formContatos {
-    text-align: center;
-    margin: 0 auto;
+.divCards {
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 0;
 }
 
-.card {
+.card{
     width: 350px;
-    padding: 20px;
+    margin: 25px;
+    padding: 0;
     position: relative;
-    margin: 0 auto;
 }
 
-.imgCard {
-    width: 100%;
-}
 .dadosCard {
-    position: absolute;
-    bottom: 45px;
-    right: 35px;
     color: white;
-    font-size: 15pt;
-    text-shadow: 1px 1px 1px black;
+    margin-top: -140px;
+    margin-left: 20px;
 }
